# CyRK

./: .coverage  .coveragerc  .gitignore  CHANGES.md  DoxyFile  LICENSE.md  MANIFEST.in  README.md  _build_cyrk.py  citation.cff  codemeta.json  conda-forge upload.md  cython_extensions.json  meta.yaml  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  version.py  version.txt
.github/workflows/: build_wheels.yml  build_wheels_main_pypi.yml  build_wheels_test_pypi.yml  push_tests.yml  push_tests_mac.yml  push_tests_ubun.yml  push_tests_ubun.yml.dev  push_tests_win.yml  python-publish-test.yml  python-publish.yml  sync_versions.yml
Benchmarks/: Accuracy.ipynb  CyRK - SciPy Comparison.ipynb  diffeq_builder.py
CyRK/: __init__.pxd  __init__.py  _cyrk.c  _cyrk.pyx  _test.py  _version.py  cyrk.pyx  dop_coefficients.py  dop_coefficients.pyx  helper.py  nbrk.py
CyRK/array/: __init__.py  interp.pxd  interp.pyx  interp_common.c
CyRK/cy/: _cyrk.pyx  _cyrk_class.pyx  c_common.cpp  c_common.hpp  c_events.cpp  c_events.hpp  common.cpp  common.hpp  common.pxd  common.pyx  cy_array.cpp  cy_array.hpp  cyrk.pyx  cysolution.cpp  cysolution.hpp  cysolve.cpp  cysolve.hpp  cysolver.cpp  cysolver.hpp  cysolver.pxd  cysolver.pyx  cysolver2.pxd  cysolver2.pyx  cysolverNew.pxd  cysolverNew.pyx  cysolverNew_test.pxd  cysolverNew_test.pyx  cysolverX.pxd  cysolverX.pyx  cysolver_api.pxd  cysolver_api.pyx  cysolver_test.pxd  cysolver_test.pyx  cysolvertest.pyx  dense.cpp  dense.hpp  diffeqs.pxd  diffeqs.pyx  events.hpp  events.pxd  (+16 more)
CyRK/cy/drivers/: base_driver.pxd  base_driver.pyx  rk_driver.pxd  rk_driver.pyx
CyRK/nb/: nb_storage.py  nbrk.py  numba_c_api.pxd  numba_c_api.pyx  numba_c_api_.cpp  numba_solver.py
CyRK/optimize/: brentq.pxd  c_brentq.cpp  c_brentq.hpp  optimize_test.pyx
CyRK/rk/: rk.c  rk.pxd  rk.pyx  rk_constants.c  rk_constants.pxd  rk_constants.pyx
CyRK/utils/: memory.pxd  parallel.pyx  utils.pxd  utils.pyx  vector.pxd
Demos/: 1 - Getting Started.ipynb  2 - Advanced CySolver Examples.ipynb  Advanced CySolver Examples.ipynb  Getting Started.ipynb  jupyter_cyhack.py  pysolve_parallel.py
Documentation/: Advanced CySolver.md  Advanced_CySolver.md  C++ API.md  C++_API.md  CySover & PySolver Reuses.md  Dense Output and t_eval.md  Dense_Output_and_t_eval.md  Deprecations.md  Events.md  Extra Output.md  Extra_Output.md  Numba.md  Optimize.md  Parallelization.md  Performance.md  Status and Error Codes.md  Status_and_Error_Codes.md  conf.py  index.md  requirements.txt
Documentation/API/: index.md
Documentation/Demos/: index.md
Documentation/Overview/: 0_Readme.md  index.md
Documentation/_static/: custom.css
Performance/: Differential Equation Check.ipynb  cyrk_performance-DOP853.csv  cyrk_performance-RK23.csv  cyrk_performance-RK45.csv  largey.py  lorenz.py  lotkavolterra.py  pendulum.py  performance.py
Tests/: Cython Class Experiments.ipynb  Cython Experiments.ipynb  Cython Testing.ipynb  Dense Extra Output Testing.ipynb  Large System Sizes.ipynb  PySolverTests.ipynb  Untitled.ipynb  plot_test.py
Tests/A_Package_Tests/: package_test.py  test_package.py
Tests/B_Cython_Tests/: cython_test.py  cython_ubuntu_test.py  test_a_cython.py  test_b_cy_extra_output.py  test_c_cy_readonly.py  test_cython.py
Tests/B_Other_Tests/: test_array.py  test_helpers.py
Tests/C_Cython_Tests/: test_a_cyrk_ode.py  test_a_cython.py  test_b_cy_extra_output.py  test_b_cysolver.py  test_c_cy_readonly.py  test_c_cython.py  test_d_cysolver_resolve.py  test_e_cy_readonly.py  test_e_cysolver_change_param.py  test_f_cysolver_resolve.py  test_g_cysolver_change_param.py  test_h_cysolver_forcefail.py
Tests/C_Numba_Tests/: numba_test.py  test_a_numba.py  test_b_extra_output.py  test_b_nb_extra_output.py
Tests/D_Numba_Tests/: test_a_numba.py  test_b_nb_extra_output.py
Tests/D_Other_Tests/: test_array.py  test_helpers.py
Tests/D_PySolver_Tests/: test_a_pysolve_ivp.py  test_b_pysolve_dense.py  test_c_pysolve_large_Neq.py  test_d_pysolve_array_lifetime.py
Tests/E_CySolver_Tests/: test_a_cysolve_ivp.py  test_b_events.py  test_c_parallel.py
Tests/E_PySolver_Tests/: test_a_pysolve_ivp.py
Tests/F_CySolver_Tests/: test_a_cysolve_ivp.py
Tests/F_Optimize_Tests/: test_brentq.py
Tests/G_Numba2_Tests/: test_a_nbsolve2_ivp.py  test_b_nbsolve2_ivp_dense.py
cython_debug/: cython_debug_info_CyRK.array.interp  cython_debug_info_CyRK.cy.common  cython_debug_info_CyRK.cy.cyrk  cython_debug_info_CyRK.cy.cysolver  cython_debug_info_CyRK.cy.cysolvertest  cython_debug_info_CyRK.utils.utils  interpreter
docs/: Advanced CySolver.md  Advanced_CySolver.md  C++ API.md  C++ Backend Object Sizes.xlsx  C++_API.md  Changes.md  Deprecations.md  Events.md  Extra_Output.md  Getting_Started.md  Installing.md  conf.py  index.md  requirements.txt
